# virtual-unwrapping-article-code

./: README.md  main_config.json  main_config_folded001.json  num_slices.txt
NN_python/: dataloader.py  model.py  pre_post_process.py  requirements.txt  run.py  test_pipeline.py
metrics_vis/: metrics_vis.py
results/folded001_results/: folded001.aff_params.txt  folded001.estimation.txt  folded001.unfolding_3d.txt
results/folded002_results/: folded002.aff_params.txt  folded002.estimation.txt  folded002.unfolding_3d.txt
results/scroll001_results/: scroll001.aff_params.txt  scroll001.estimation.txt  scroll001.unfolding_3d.txt
results/scroll002_results/: scroll002.aff_params.txt  scroll002.estimation.txt  scroll002.unfolding_3d.txt
results/scroll003_results/: scroll003.aff_params.txt  scroll003.estimation.txt  scroll003.unfolding_3d.txt
results/scroll004_results/: scroll004.aff_params.txt  scroll004.estimation.txt  scroll004.unfolding_3d.txt
scans/: folded001.scan.3d.txt  folded002.scan.3d.txt  scroll001.scan.3d.txt  scroll002.scan.3d.txt  scroll003.scan.3d.txt  scroll004.scan.3d.txt
unfolder/: CMakeLists.txt  alignment.cpp  alignment.h  correspondence.cpp  correspondence.h  new_skelet_conn.cpp  new_skelet_conn.h  st_fin_slice.cpp  st_fin_slice.h  unfolding_pipeline.cpp  utility.cpp  utility.h
